feat: add BitBox SVG asset and update localization for hardware wallet connection instructions

--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Изберете вашето устройство в портфейла за торта и продължете с настройката.",
   "connect_yats": "Добавете Yats",
   "connect_your_hardware_wallet": "Свържете хардуерния си портфейл с помощта на Bluetooth или USB",
-  "connect_your_hardware_wallet_ios": "Свържете хардуерния си портфейл с помощта на Bluetooth",
+  "connect_your_hardware_wallet_ble": "Свържете хардуерния си портфейл с помощта на Bluetooth",
+  "connect_your_hardware_wallet_usb": "Свържете хардуерния си портфейл с помощта на USB",
   "connected": "Свързани",
   "connection_sync": "Свързване и синхронизиране",
   "connectWalletPrompt": "Свържете портфейла си с WalletConnect, за да извършвате транзакции",
