--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Wählen Sie Ihr Gerät in Cake Wallet aus und fahren Sie mit dem Setup fort.",
   "connect_yats": "Yats verbinden",
   "connect_your_hardware_wallet": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth oder USB",
-  "connect_your_hardware_wallet_ios": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth",
+  "connect_your_hardware_wallet_ble": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth",
+  "connect_your_hardware_wallet_usb": "Schließen Sie Ihre Hardware -Brieftasche mit USB an",
   "connected": "Verbunden",
   "connection_sync": "Verbindung und Synchronisierung",
   "connectWalletPrompt": "Verbinden Sie Ihr Wallet mit WalletConnect, um Transaktionen durchzuführen",
