--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Select your device in Cake Wallet and continue with the setup.",
   "connect_yats": "Connect Yats",
   "connect_your_hardware_wallet": "Connect your hardware wallet using Bluetooth or USB",
-  "connect_your_hardware_wallet_ios": "Connect your hardware wallet using Bluetooth",
+  "connect_your_hardware_wallet_ble": "Connect your hardware wallet using Bluetooth",
+  "connect_your_hardware_wallet_usb": "Connect your hardware wallet using USB",
   "connected": "Connected",
   "connection_sync": "Connection and sync",
   "connectWalletPrompt": "Connect your wallet with WalletConnect to make transactions",
