--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -170,8 +170,8 @@
   "collection_address": "Adresse de la collection",
   "collection_description": "Description de la collection",
   "collection_name": "Nom de collection",
-  "coming_soon_tag": "À venir",
   "color_theme": "Couleur du thème",
+  "coming_soon_tag": "À venir",
   "commit_transaction_amount_fee": "Valider la transaction\nMontant : ${amount}\nFrais : ${fee}",
   "confirm": "Confirmer",
   "confirm_delete_template": "Cette action va supprimer ce modèle. Souhaitez-vous continuer ?",
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Sélectionnez votre appareil dans Cake Wallet et poursuivez la configuration.",
   "connect_yats": "Connecter Yats",
   "connect_your_hardware_wallet": "Connectez votre portefeuille matériel à l'aide du Bluetooth ou de l'USB",
-  "connect_your_hardware_wallet_ios": "Connectez votre portefeuille matériel à l'aide du Bluetooth",
+  "connect_your_hardware_wallet_ble": "Connectez votre portefeuille matériel à l'aide du Bluetooth",
+  "connect_your_hardware_wallet_usb": "Connectez votre portefeuille matériel à l'aide USB",
   "connected": "Connecté",
   "connection_sync": "Connexion et synchronisation",
   "connectWalletPrompt": "Connectez votre portefeuille (wallet) avec WalletConnect pour effectuer des transactions",
