--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Zaɓi na'urarka a cikin walat walat kuma ci gaba da saiti.",
   "connect_yats": "Haɗa Yats",
   "connect_your_hardware_wallet": "Haɗa Wallake Wallware ɗinku ta Bluetooth ko USB",
-  "connect_your_hardware_wallet_ios": "Haɗa kayan aikinku ta Bluetooth",
+  "connect_your_hardware_wallet_ble": "Haɗa kayan aikinku ta Bluetooth",
+  "connect_your_hardware_wallet_usb": "Haɗa kayan aikinku ta amfani da USB",
   "connected": "Wanda aka haɗa",
   "connection_sync": "Haɗi da daidaitawa",
   "connectWalletPrompt": "Haɗa walat ɗin ku tare da WalletConnect don yin ma'amala",
