--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "केक वॉलेट में अपने डिवाइस का चयन करें और सेटअप के साथ जारी रखें।",
   "connect_yats": "कनेक्ट Yats",
   "connect_your_hardware_wallet": "ब्लूटूथ या यूएसबी का उपयोग करके अपने हार्डवेयर वॉलेट को कनेक्ट करें",
-  "connect_your_hardware_wallet_ios": "ब्लूटूथ का उपयोग करके अपने हार्डवेयर वॉलेट को कनेक्ट करें",
+  "connect_your_hardware_wallet_ble": "ब्लूटूथ का उपयोग करके अपने हार्डवेयर वॉलेट को कनेक्ट करें",
+  "connect_your_hardware_wallet_usb": "USB का उपयोग करके अपने हार्डवेयर वॉलेट को कनेक्ट करें",
   "connected": "जुड़े हुए",
   "connection_sync": "कनेक्शन और सिंक",
   "connectWalletPrompt": "लेन-देन करने के लिए अपने वॉलेट को वॉलेटकनेक्ट से कनेक्ट करें",
