--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Odaberite svoj uređaj u novčanici za torte i nastavite s postavljanjem.",
   "connect_yats": "Povežite Yats",
   "connect_your_hardware_wallet": "Spojite svoj hardverski novčanik pomoću Bluetooth -a ili USB -a",
-  "connect_your_hardware_wallet_ios": "Spojite svoj hardverski novčanik pomoću Bluetooth -a",
+  "connect_your_hardware_wallet_ble": "Spojite svoj hardverski novčanik pomoću Bluetooth -a",
+  "connect_your_hardware_wallet_usb": "Spojite svoj hardverski novčanik pomoću USB -a",
   "connected": "Povezan",
   "connection_sync": "Povezivanje i sinkronizacija",
   "connectWalletPrompt": "Povežite svoj novčanik s WalletConnectom za obavljanje transakcija",
