--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Ընտրեք ձեր սարքը տորթի դրամապանակում եւ շարունակեք կարգաբերումը:",
   "connect_yats": "Միացրեք Yat-ները",
   "connect_your_hardware_wallet": "Միացրեք ձեր ապարատային դրամապանակը Bluetooth-ի կամ USB-ի միջոցով",
-  "connect_your_hardware_wallet_ios": "Միացրեք ձեր ապարատային դրամապանակը Bluetooth-ի միջոցով",
+  "connect_your_hardware_wallet_ble": "Միացրեք ձեր ապարատային դրամապանակը Bluetooth-ի միջոցով",
+  "connect_your_hardware_wallet_usb": "Միացրեք ձեր ապարատային դրամապանակը `օգտագործելով USB",
   "connected": "Միացված",
   "connection_sync": "Կապ և սինխրոնիզացիա",
   "connectWalletPrompt": "Միացրեք ձեր դրամապանակը WalletConnect-ի միջոցով գործարքներ կատարելու համար",
