--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Pilih perangkat Anda di dompet kue dan lanjutkan dengan pengaturan.",
   "connect_yats": "Hubungkan Yats",
   "connect_your_hardware_wallet": "Hubungkan dompet perangkat keras Anda menggunakan Bluetooth atau USB",
-  "connect_your_hardware_wallet_ios": "Hubungkan dompet perangkat keras Anda menggunakan Bluetooth",
+  "connect_your_hardware_wallet_ble": "Hubungkan dompet perangkat keras Anda menggunakan Bluetooth",
+  "connect_your_hardware_wallet_usb": "Hubungkan dompet perangkat keras Anda menggunakan USB",
   "connected": "Terhubung",
   "connection_sync": "Koneksi dan sinkronisasi",
   "connectWalletPrompt": "Hubungkan dompet Anda dengan WalletConnect untuk melakukan transaksi",
