--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "ケーキウォレットでデバイスを選択し、セットアップを続行します。",
   "connect_yats": "Yatsを接続します",
   "connect_your_hardware_wallet": "BluetoothまたはUSBを使用して、ハードウェアウォレットを接続します",
-  "connect_your_hardware_wallet_ios": "Bluetoothを使用してハードウェアウォレットを接続します",
+  "connect_your_hardware_wallet_ble": "Bluetoothを使用してハードウェアウォレットを接続します",
+  "connect_your_hardware_wallet_usb": "USBを使用してハードウェアウォレットを接続します",
   "connected": "接続",
   "connection_sync": "接続と同期",
   "connectWalletPrompt": "ウォレットを WalletConnect に接続して取引を行う",
