--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "케이크 지갑에서 장치를 선택하고 설정을 계속하십시오.",
   "connect_yats": "Yat 연결",
   "connect_your_hardware_wallet": "블루투스 또는 USB를 사용하여 하드웨어 지갑 연결",
-  "connect_your_hardware_wallet_ios": "블루투스를 사용하여 하드웨어 지갑 연결",
+  "connect_your_hardware_wallet_ble": "블루투스를 사용하여 하드웨어 지갑 연결",
+  "connect_your_hardware_wallet_usb": "USB를 사용하여 하드웨어 지갑을 연결하십시오",
   "connected": "연결됨",
   "connection_sync": "연결 및 동기화",
   "connectWalletPrompt": "거래를 하려면 WalletConnect로 지갑을 연결하세요",
