--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Selecteer uw apparaat in cake -portemonnee en ga verder met de opstelling.",
   "connect_yats": "Verbind Yats",
   "connect_your_hardware_wallet": "Sluit uw hardware -portemonnee aan met Bluetooth of USB",
-  "connect_your_hardware_wallet_ios": "Sluit uw hardware -portemonnee aan met Bluetooth",
+  "connect_your_hardware_wallet_ble": "Sluit uw hardware -portemonnee aan met Bluetooth",
+  "connect_your_hardware_wallet_usb": "Sluit uw hardware -portemonnee aan met USB",
   "connected": "Aangesloten",
   "connection_sync": "Verbinding en synchronisatie",
   "connectWalletPrompt": "Verbind uw portemonnee met WalletConnect om transacties uit te voeren",
