--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Wybierz urządzenie w portfelu ciasta i kontynuuj konfigurację.",
   "connect_yats": "Połącz Yats",
   "connect_your_hardware_wallet": "Podłącz portfel sprzętowy za pomocą Bluetooth lub USB",
-  "connect_your_hardware_wallet_ios": "Podłącz portfel sprzętowy za pomocą Bluetooth",
+  "connect_your_hardware_wallet_ble": "Podłącz portfel sprzętowy za pomocą Bluetooth",
+  "connect_your_hardware_wallet_usb": "Podłącz portfel sprzętowy za pomocą USB",
   "connected": "Połączony",
   "connection_sync": "Połączenie i synchronizacja",
   "connectWalletPrompt": "Połącz swój portfel z WalletConnect, aby dokonywać transakcji",
