--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Selecione seu dispositivo na Cake Wallet e continue com a configuração.",
   "connect_yats": "Connect Yats",
   "connect_your_hardware_wallet": "Conecte sua carteira de hardware usando Bluetooth ou USB",
-  "connect_your_hardware_wallet_ios": "Conecte sua carteira de hardware usando o Bluetooth",
+  "connect_your_hardware_wallet_ble": "Conecte sua carteira de hardware usando o Bluetooth",
+  "connect_your_hardware_wallet_usb": "Conecte sua carteira de hardware usando USB",
   "connected": "Conectado",
   "connection_sync": "Conexão e sincronização",
   "connectWalletPrompt": "Conecte sua carteira ao WalletConnect para fazer transações",
