--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "เลือกอุปกรณ์ของคุณในกระเป๋าเงินเค้กและดำเนินการติดตั้งต่อไป",
   "connect_yats": "เชื่อมต่อ Yats",
   "connect_your_hardware_wallet": "เชื่อมต่อกระเป๋าเงินฮาร์ดแวร์ของคุณโดยใช้บลูทู ธ หรือ USB",
-  "connect_your_hardware_wallet_ios": "เชื่อมต่อกระเป๋าเงินฮาร์ดแวร์ของคุณโดยใช้บลูทู ธ",
+  "connect_your_hardware_wallet_ble": "เชื่อมต่อกระเป๋าเงินฮาร์ดแวร์ของคุณโดยใช้บลูทู ธ",
+  "connect_your_hardware_wallet_usb": "เชื่อมต่อกระเป๋าเงินฮาร์ดแวร์ของคุณโดยใช้ USB",
   "connected": "ซึ่งเชื่อมต่อกัน",
   "connection_sync": "การเชื่อมต่อและการซิงค์",
   "connectWalletPrompt": "เชื่อมต่อกระเป๋าเงินของคุณด้วย WalletConnect เพื่อทำธุรกรรม",
