--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Piliin ang iyong aparato sa cake wallet at magpatuloy sa pag -setup.",
   "connect_yats": "Ikonekta sa Yats",
   "connect_your_hardware_wallet": "Ikonekta ang iyong hardware wallet gamit ang Bluetooth o USB",
-  "connect_your_hardware_wallet_ios": "Ikonekta ang iyong wallet gamit ang Bluetooth",
+  "connect_your_hardware_wallet_ble": "Ikonekta ang iyong wallet gamit ang Bluetooth",
+  "connect_your_hardware_wallet_usb": "Ikonekta ang iyong wallet ng hardware gamit ang USB",
   "connected": "Konektado",
   "connection_sync": "Koneksyon at pag-sync",
   "connectWalletPrompt": "Ikonekta ang iyong wallet sa WalletConnect upang gumawa ng mga transaksyon",
