--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Cihazınızı kek cüzdanında seçin ve kuruluma devam edin.",
   "connect_yats": "Yat'lara bağlan",
   "connect_your_hardware_wallet": "Bluetooth veya USB kullanarak donanım cüzdanınızı bağlayın",
-  "connect_your_hardware_wallet_ios": "Bluetooth kullanarak donanım cüzdanınızı bağlayın",
+  "connect_your_hardware_wallet_ble": "Bluetooth kullanarak donanım cüzdanınızı bağlayın",
+  "connect_your_hardware_wallet_usb": "USB kullanarak donanım cüzdanınızı bağlayın",
   "connected": "Bağlı",
   "connection_sync": "Bağlantı ve senkronizasyon",
   "connectWalletPrompt": "İşlem yapmak için cüzdanınızı WalletConnect'e bağlayın",
