--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -192,7 +192,8 @@
   "connect_hw_info_step_4": "Chọn thiết bị của bạn trong ví bánh và tiếp tục với thiết lập.",
   "connect_yats": "Kết nối Yats",
   "connect_your_hardware_wallet": "Kết nối ví phần cứng của bạn bằng Bluetooth hoặc USB",
-  "connect_your_hardware_wallet_ios": "Kết nối ví phần cứng của bạn bằng Bluetooth",
+  "connect_your_hardware_wallet_ble": "Kết nối ví phần cứng của bạn bằng Bluetooth",
+  "connect_your_hardware_wallet_usb": "Kết nối ví phần cứng của bạn bằng USB",
   "connected": "Kết nối",
   "connection_sync": "Kết nối và đồng bộ hóa",
   "connectWalletPrompt": "Kết nối ví của bạn với WalletConnect để thực hiện giao dịch",
