--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Yan ẹrọ rẹ ni apamọwọ akara oyinbo ki o tẹsiwaju pẹlu iṣeto.",
   "connect_yats": "So àwọn Yat",
   "connect_your_hardware_wallet": "So apamọwọ irinṣẹ rẹ nipa lilo Bluetooth tabi USB",
-  "connect_your_hardware_wallet_ios": "So apamọwọ ẹrọ rẹ ni lilo Bluetooth",
+  "connect_your_hardware_wallet_ble": "So apamọwọ ẹrọ rẹ ni lilo Bluetooth",
+  "connect_your_hardware_wallet_usb": "So apamọwọ ohun elo rẹ ni lilo USB",
   "connected": "Sopọ",
   "connection_sync": "Ìkànpọ̀ àti ìbádọ́gba",
   "connectWalletPrompt": "So apamọwọ rẹ pọ pẹlu WalletConnect lati ṣe awọn iṣowo",
