--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "在蛋糕钱包中选择您的设备，然后继续设置。",
   "connect_yats": "连接 Yats",
   "connect_your_hardware_wallet": "使用蓝牙或USB连接硬件钱包",
-  "connect_your_hardware_wallet_ios": "使用蓝牙连接硬件钱包",
+  "connect_your_hardware_wallet_ble": "使用蓝牙连接硬件钱包",
+  "connect_your_hardware_wallet_usb": "使用USB连接硬件钱包",
   "connected": "连接",
   "connection_sync": "连接和同步",
   "connectWalletPrompt": "将您的钱包与 WalletConnect 连接以进行交易",
