--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "حدد جهازك في محفظة كعكة ومتابعة الإعداد.",
   "connect_yats": "توصيل Yats",
   "connect_your_hardware_wallet": "قم بتوصيل محفظة الأجهزة الخاصة بك باستخدام Bluetooth أو USB",
-  "connect_your_hardware_wallet_ios": "قم بتوصيل محفظة الأجهزة الخاصة بك باستخدام Bluetooth",
+  "connect_your_hardware_wallet_ble": "قم بتوصيل محفظة الأجهزة الخاصة بك باستخدام Bluetooth",
+  "connect_your_hardware_wallet_usb": "قم بتوصيل محفظة الأجهزة الخاصة بك باستخدام USB",
   "connected": "متصل",
   "connection_sync": "الاتصال والمزامنة",
   "connectWalletPrompt": "ﺕﻼ﻿ﻣﺎﻌﻤﻟﺍ ءﺍﺮﺟﻹ﻿ WalletConnect ﻊﻣ ﻚﺘﻈﻔﺤﻣ ﻞﻴﺻﻮﺘﺑ ﻢﻗ",
