--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Vyberte zařízení v peněžence dortu a pokračujte v nastavení.",
   "connect_yats": "Připojit Yaty",
   "connect_your_hardware_wallet": "Připojte hardwarovou peněženku pomocí Bluetooth nebo USB",
-  "connect_your_hardware_wallet_ios": "Připojte hardwarovou peněženku pomocí Bluetooth",
+  "connect_your_hardware_wallet_ble": "Připojte hardwarovou peněženku pomocí Bluetooth",
+  "connect_your_hardware_wallet_usb": "Připojte hardwarovou peněženku pomocí USB",
   "connected": "Připojeno",
   "connection_sync": "Připojení a synch.",
   "connectWalletPrompt": "Propojte svou peněženku s WalletConnect a provádějte transakce",
