--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Seleccione su dispositivo en Cake Wallet y continúe con la configuración.",
   "connect_yats": "Conectar Yats",
   "connect_your_hardware_wallet": "Conecta tu billetera de hardware con Bluetooth o USB",
-  "connect_your_hardware_wallet_ios": "Conecta tu billetera de hardware con Bluetooth",
+  "connect_your_hardware_wallet_ble": "Conecta tu billetera de hardware con Bluetooth",
+  "connect_your_hardware_wallet_usb": "Conecte su billetera de hardware con USB",
   "connected": "Conectado",
   "connection_sync": "Conexión y sincronización",
   "connectWalletPrompt": "Conecte tu billetera con WalletConnect para realizar transacciones",
