--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Seleziona il tuo dispositivo nel portafoglio Cake e continua con l'installazione.",
   "connect_yats": "Connetti Yats",
   "connect_your_hardware_wallet": "Collega il tuo portafoglio hardware tramite Bluetooth o USB",
-  "connect_your_hardware_wallet_ios": "Collega il tuo portafoglio hardware tramite Bluetooth",
+  "connect_your_hardware_wallet_ble": "Collega il tuo portafoglio hardware tramite Bluetooth",
+  "connect_your_hardware_wallet_usb": "Collega il tuo portafoglio hardware usando USB",
   "connected": "Collegato",
   "connection_sync": "Connessione e sincronizzazione",
   "connectWalletPrompt": "Collega il tuo portafoglio con WalletConnect per effettuare transazioni",
