--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Cake Wallet တွင်သင်၏ device ကိုရွေးချယ်ပြီး setup ကိုဆက်လုပ်ပါ။",
   "connect_yats": "Yats ကိုချိတ်ဆက်ပါ။",
   "connect_your_hardware_wallet": "သင်၏ hardware ပိုက်ဆံအိတ်ကို Bluetooth သို့မဟုတ် USB ကို သုံး. ချိတ်ဆက်ပါ",
-  "connect_your_hardware_wallet_ios": "သင်၏ hardware ပိုက်ဆံအိတ်ကို Bluetooth ကို အသုံးပြု. ချိတ်ဆက်ပါ",
+  "connect_your_hardware_wallet_ble": "သင်၏ hardware ပိုက်ဆံအိတ်ကို Bluetooth ကို အသုံးပြု. ချိတ်ဆက်ပါ",
+  "connect_your_hardware_wallet_usb": "USB သုံး. သင်၏ hardware ပိုက်ဆံအိတ်ကိုချိတ်ဆက်ပါ",
   "connected": "ချိတ်ဆက်ထားသော",
   "connection_sync": "ချိတ်ဆက်မှုနှင့် ထပ်တူပြုခြင်း။",
   "connectWalletPrompt": "အရောင်းအဝယ်ပြုလုပ်ရန် သင့်ပိုက်ဆံအိတ်ကို WalletConnect နှင့် ချိတ်ဆက်ပါ။",
