--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Выберите свое устройство в кошельке для торта и продолжайте с настройкой.",
   "connect_yats": "Подключить Yats",
   "connect_your_hardware_wallet": "Подключите свой аппаратный кошелек с помощью Bluetooth или USB",
-  "connect_your_hardware_wallet_ios": "Подключите свой аппаратный кошелек с помощью Bluetooth",
+  "connect_your_hardware_wallet_ble": "Подключите свой аппаратный кошелек с помощью Bluetooth",
+  "connect_your_hardware_wallet_usb": "Подключите свой аппаратный кошелек с помощью USB",
   "connected": "Подключенный",
   "connection_sync": "Подключение и синхронизация",
   "connectWalletPrompt": "Подключите свой кошелек к WalletConnect для совершения транзакций.",
