--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -193,7 +193,8 @@
   "connect_hw_info_step_4": "Виберіть свій пристрій у гаманці тортів і продовжуйте налаштування.",
   "connect_yats": "Підключіть Yats",
   "connect_your_hardware_wallet": "Підключіть апаратний гаманець за допомогою Bluetooth або USB",
-  "connect_your_hardware_wallet_ios": "Підключіть апаратний гаманець за допомогою Bluetooth",
+  "connect_your_hardware_wallet_ble": "Підключіть апаратний гаманець за допомогою Bluetooth",
+  "connect_your_hardware_wallet_usb": "Підключіть свій апаратний гаманець за допомогою USB",
   "connected": "З'єднаний",
   "connection_sync": "Підключення та синхронізація",
   "connectWalletPrompt": "Підключіть свій гаманець до WalletConnect, щоб здійснювати транзакції",
