feat: add support for new hardware wallet types (Cupcake, Coldcard, SeedSigner) and improve QR Code handling
- Introduced new hardware wallet types (Cupcake, Coldcard, SeedSigner) with corresponding assets and localization updates.
- Updated QR Code format selection for hardware wallets with new formats (BCUR, BBQR) specific to devices.
- Improved hardware wallet restoration flow to include airgapped wallet handling via QR Code scanning.
- Refactored routing, view models, and dependency injection to accommodate new hardware wallet types.
- Enhanced UI for device manufacturer selection and QR Code format dialogs.

--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -24,7 +24,7 @@
   "add_token_disclaimer_check": "Ich habe die Adresse und Informationen zum Token-Contract anhand einer seriösen Quelle bestätigt. Das Hinzufügen böswilliger oder falscher Informationen kann zu einem Verlust von Geldern führen.",
   "add_token_warning": "Bearbeiten oder fügen Sie Token nicht gemäß den Anweisungen von Betrügern hinzu. Bestätigen Sie Token-Adressen immer mit seriösen Quellen!",
   "add_value": "Wert hinzufügen",
-  "added_message_for_ata_error": "Bitte stellen Sie sicher, dass Sie über genügend SOL -Balance verfügen, um Ihre Transaktion abzuschließen.",
+  "added_message_for_ata_error": "Bitte stellen Sie sicher, dass Sie über genügend SOL-Balance verfügen, um Ihre Transaktion abzuschließen.",
   "address": "Adresse",
   "address_book": "Adressbuch",
   "address_book_menu": "Adressbuch",
@@ -109,7 +109,7 @@
   "cake_2fa_preset": "Cake 2FA-Voreinstellung",
   "cake_dark_theme": "Cake Dark Thema",
   "cake_pay_account_note": "Melden Sie sich nur mit einer E-Mail-Adresse an, um Karten anzuzeigen und zu kaufen. Einige sind sogar mit Rabatt erhältlich!",
-  "cake_pay_card_email_delivered_message": "Ihre Geschenkkarte wird nach den erforderlichen Bestätigungen per E -Mail geliefert.",
+  "cake_pay_card_email_delivered_message": "Ihre Geschenkkarte wird nach den erforderlichen Bestätigungen per E-Mail geliefert.",
   "cake_pay_learn_more": "Kaufen und lösen Sie Geschenkkarten sofort in der App ein!\nWischen Sie von links nach rechts, um mehr zu erfahren.",
   "cake_pay_save_order": "Die Karte sollte innerhalb von 1 Werktag an Ihre E-Mail gesendet werden, \n Ihre Bestell-ID zu speichern:",
   "cake_pay_subtitle": "Kaufen Sie weltweite Prepaid-Karten und Geschenkkarten",
@@ -131,7 +131,7 @@
   "card_address": "Adresse:",
   "cardholder_agreement": "Karteninhabervertrag",
   "cards": "Karten",
-  "chain_id": "Ketten -ID",
+  "chain_id": "Chain-ID",
   "chains": "Blockchains",
   "change": "Ändern",
   "change_backup_password_alert": "Ihre vorherigen Sicherungsdateien können nicht mit einem neuen Sicherungskennwort importiert werden. Das neue Sicherungskennwort wird nur für neue Sicherungsdateien verwendet. Sind Sie sicher, dass Sie das Sicherungskennwort ändern möchten?",
@@ -157,8 +157,8 @@
   "choose_derivation": "Wählen Sie Wallet-Ableitung",
   "choose_from_available_options": "Wähle aus verfügbaren Optionen:",
   "choose_one": "Wähle ein",
-  "choose_qr_code_format": "Wählen Sie das QR -Code -Format",
-  "choose_qr_code_format_note": "Wählen Sie das richtige Format für Ihre Hardware -Brieftasche:",
+  "choose_qr_code_format": "Wählen Sie das QR-Code-Format",
+  "choose_qr_code_format_note": "Wählen Sie das richtige Format für Ihr Hardware-Wallet:",
   "choose_relay": "Bitte wählen Sie ein zu verwendendes Relais aus",
   "choose_wallet_currency": "Bitte wählen Sie die Währung der Wallet:",
   "choose_wallet_group": "Wählen Sie Walletgruppe",
@@ -194,7 +194,7 @@
   "connect_yats": "Yats verbinden",
   "connect_your_hardware_wallet": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth oder USB",
   "connect_your_hardware_wallet_ble": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth",
-  "connect_your_hardware_wallet_usb": "Schließen Sie Ihre Hardware -Brieftasche mit USB an",
+  "connect_your_hardware_wallet_usb": "Schließen Sie Ihre Hardware-Wallet mit USB an",
   "connected": "Verbunden",
   "connection_sync": "Verbindung und Synchronisierung",
   "connectWalletPrompt": "Verbinden Sie Ihr Wallet mit WalletConnect, um Transaktionen durchzuführen",
@@ -283,7 +283,7 @@
   "disable_buy": "Kaufaktion deaktivieren",
   "disable_cake_2fa": "Cake 2FA deaktivieren",
   "disable_exchange": "Exchange deaktivieren",
-  "disable_exchange_option": "Deaktivieren Sie die Exchange -Option",
+  "disable_exchange_option": "Deaktivieren Sie die Exchange-Option",
   "disable_fee_api_warning": "Wenn dies ausgeschaltet wird, sind die Gebührenquoten in einigen Fällen möglicherweise ungenau, sodass Sie die Gebühren für Ihre Transaktionen möglicherweise überbezahlt oder unterzahlt",
   "disable_fiat": "Fiat deaktivieren",
   "disable_sell": "Verkaufsaktion deaktivieren",
@@ -332,7 +332,7 @@
   "enterTokenID": "Geben Sie die Token-ID ein",
   "enterWalletConnectURI": "Geben Sie den WalletConnect-URI ein",
   "error": "Fehler",
-  "error_dialog_content": "Hoppla, wir haben einen Fehler.\n\nBitte senden Sie den Fehlerbericht an unser Support -Team, um die Anwendung zu verbessern.",
+  "error_dialog_content": "Hoppla, wir haben einen Fehler.\n\nBitte senden Sie den Fehlerbericht an unser Support-Team, um die Anwendung zu verbessern.",
   "error_text_account_name": "Der Kontoname darf nur Buchstaben und Zahlen enthalten\nund muss zwischen 1 und 15 Zeichen lang sein",
   "error_text_address": "Die Walletadresse muss dem Typ der Kryptowährung\nentsprechen",
   "error_text_amount": "Betrag darf nur Zahlen enthalten",
@@ -356,7 +356,7 @@
   "error_while_processing": "Ein Fehler beim Proceessing trat ein Fehler auf",
   "errorGettingCredentials": "Fehlgeschlagen: Fehler beim Abrufen der Anmeldeinformationen",
   "errorSigningTransaction": "Beim Signieren der Transaktion ist ein Fehler aufgetreten",
-  "establishing_tor_connection": "Einstellung der TOR -Verbindung",
+  "establishing_tor_connection": "Einstellung der Tor-Verbindung",
   "estimated": "Geschätzt",
   "estimated_new_fee": "Geschätzte neue Gebühr",
   "estimated_receive_amount": "Geschätzter Empfangsbetrag",
@@ -471,7 +471,7 @@
   "light_theme": "Hell",
   "litecoin_enable_mweb_sync": "Aktivieren Sie das MWEB-Scannen",
   "litecoin_mweb": "MWeb",
-  "litecoin_mweb_allow_coins": "MWEB -Münzen zulassen",
+  "litecoin_mweb_allow_coins": "MWEB-Coins zulassen",
   "litecoin_mweb_always_scan": "Setzen Sie MWeb immer scannen",
   "litecoin_mweb_description": "MWWB ist ein neues Protokoll, das schnellere, billigere und privatere Transaktionen zu Litecoin bringt",
   "litecoin_mweb_dismiss": "Zurückweisen",
@@ -628,7 +628,7 @@
   "potential_scam": "Potenzieller Betrug",
   "powered_by": "Ermöglicht durch ${title}",
   "pre_seed_button_text": "Verstanden. Zeig mir meinen Seed",
-  "pre_seed_description": "Auf der nächsten Seite sehen Sie eine Reihe von Wörtern. Dies ist Ihr einzigartiger und privater Seed und der einzige Weg, Ihre Brieftasche im Falle eines Verlusts oder einer Fehlfunktion zurückzugewinnen. Es liegt in Ihrer Verantwortung, es aufzuschreiben und an einem sicheren Ort außerhalb der Cake Wallet -App aufzubewahren.",
+  "pre_seed_description": "Auf der nächsten Seite sehen Sie eine Reihe von Wörtern. Dies ist Ihr einzigartiger und privater Seed und der einzige Weg, Ihre Brieftasche im Falle eines Verlusts oder einer Fehlfunktion zurückzugewinnen. Es liegt in Ihrer Verantwortung, es aufzuschreiben und an einem sicheren Ort außerhalb der Cake Wallet-App aufzubewahren.",
   "pre_seed_title": "WICHTIG",
   "prepaid_cards": "Karten mit Guthaben",
   "prevent_screenshots": "Verhindern Sie Screenshots und Bildschirmaufzeichnungen",
@@ -647,9 +647,9 @@
   "public_key": "Öffentlicher Schlüssel",
   "purchase_gift_card": "Geschenkkarte kaufen",
   "purple_dark_theme": "Lila dunkle Thema",
-  "qr_code_format": "QR -Codeformat",
-  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) ist der Branchenstandard und am weitesten verbreitet mit Bitcoin -Hardware -Geldbörsen und sollte von den meisten Benutzern ausgewählt werden. BBQR (Better Bitcoin QR) ist ein einzigartiges Format, das nur von Coldcard -Hardware -Geldbörsen verwendet wird, beginnend mit ihrem Modell Q.",
-  "qr_code_format_note": "Unterschiedliche QR -Codeformate werden von verschiedenen Hardware -Geldbörsen im Bitcoin -Bereich verwendet",
+  "qr_code_format": "QR-Codeformat",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) ist der Branchenstandard und am weitesten verbreitet mit Bitcoin-Hardware-Wallets und sollte von den meisten Benutzern ausgewählt werden. BBQR (Better Bitcoin QR) ist ein einzigartiges Format, das nur von Coldcard-Hardware-Wallets verwendet wird, beginnend mit ihrem Modell Q.",
+  "qr_code_format_note": "Unterschiedliche QR-Codeformate werden von verschiedenen Hardware-Wallets im Bitcoin-Bereich verwendet",
   "qr_fullscreen": "Tippen Sie hier, um den QR-Code im Vollbildmodus zu öffnen",
   "qr_instruction": "Verwenden Sie diese Adresse, um ein Token oder ein Sammlerstück zu erhalten",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
@@ -790,7 +790,7 @@
   "select_manufacturer_title": "Hersteller auswählen",
   "select_sell_provider_notice": "Wählen Sie oben einen Verkaufsanbieter aus. Sie können diesen Bildschirm überspringen, indem Sie in den App-Einstellungen Ihren Standard-Verkaufsanbieter festlegen.",
   "select_your_country": "Bitte wählen Sie Ihr Land aus",
-  "selected_trocador_provider": "Ausgewählter Trocador -Anbieter",
+  "selected_trocador_provider": "Ausgewählter Trocador-Anbieter",
   "sell": "Verkaufen",
   "sell_alert_content": "Wir unterstützen derzeit nur den Verkauf von Bitcoin, Ethereum und Litecoin. Bitte erstellen Sie Ihr Bitcoin-, Ethereum- oder Litecoin-Wallet oder wechseln Sie zu diesem.",
   "sell_monero_com_alert_content": "Der Verkauf von Monero wird noch nicht unterstützt",
@@ -890,14 +890,14 @@
   "silent_payments_settings": "Einstellungen für Silent Payments",
   "single_seed_wallets_group": "Einzelne Wallets",
   "slidable": "Verschiebbar",
-  "solana_create_associated_token_account_exception": "Fehler beim Erstellen des zugehörigen Token -Kontos für die Empfängeradresse.",
-  "solana_no_associated_token_account_exception": "Für diese Adresse ist kein Token -Konto zugeordnet.",
+  "solana_create_associated_token_account_exception": "Fehler beim Erstellen des zugehörigen Token-Kontos für die Empfängeradresse.",
+  "solana_no_associated_token_account_exception": "Für diese Adresse ist kein Token-Konto zugeordnet.",
   "solana_sign_native_transaction_rent_exception": "Transaktion kann nicht abgeschlossen werden. Nach der Transaktion ist nicht genug Sol für die Miete übrig. Bitte stocken Sie Ihr SOL-Guthaben auf oder reduzieren Sie die Menge an SOL, die Sie senden.",
   "solana_sign_spl_token_transaction_rent_exception": "Transaktion kann nicht abgeschlossen werden. Nach der Transaktion ist nicht genug Sol für die Miete übrig. Bitte stocken Sie Ihr SOL-Guthaben auf",
   "sort_by": "Sortiere nach",
   "spend_key_private": "Spend Key (geheim)",
   "spend_key_public": "Spend Key (öffentlich)",
-  "starting_tor_proxy": "TOR -Proxy beginnen",
+  "starting_tor_proxy": "Tor-Proxy beginnen",
   "status": "Status: ",
   "step": "Schritt",
   "string_default": "Standard",
@@ -958,8 +958,8 @@
   "tokenID": "AUSWEIS",
   "tokens_strong_warning": "Senden Sie niemals Token an diese Adresse !",
   "tor_connection": "Tor-Verbindung",
-  "tor_connection_timeout": "TOR -Verbindungs ​​-Zeitüberschreitung",
-  "tor_experimental": "Dies ist eine experimentelle Funktion, nicht alle Verbindungen, die aus Kuchen -Wallet -Stütze für die Routing hergestellt werden. Einige Verbindungen können ClearNET verwenden, um den App -Traffic -App -TOR mit dem VPN -Modus vollständig zu verwenden.",
+  "tor_connection_timeout": "TOR-Verbindungs-Zeitüberschreitung",
+  "tor_experimental": "Dies ist eine experimentelle Funktion, nicht alle Verbindungen, die aus Cake Wallet hergestellt werden unterstützen. Einige Verbindungen können das clearnet verwenden, um den gesmaten App-Traffic mit Tor zu routen verwende eine App mit VPN-Modus.",
   "tor_only": "Nur Tor",
   "total": "Gesamt",
   "total_saving": "Gesamteinsparungen",
